# nlp-music

./: .gitignore  .pre-commit-config.yaml  README.md  busca_musica.R  pyproject.toml
data/: N_palavras_idiomas.csv  ahsduiash  data_LDA_final.rds  data_final_pt_2.rds  data_kmeans.rds  data_mm_dp.rds  data_mm_dp_final.rds  dtm_filtrada.rds  dtm_filtrada_30.rds  dtm_filtrada_tf_30.rds  dtm_final_unicas.rds  dtm_letras_tfidf_30.rds  processed.csv  processed_2.csv  processed_3.csv
src/Analise/: analise_descritiva.R  dtm_letras.R
src/Analise/LDA/: LDA.R  analise_lda.R  grafico_de_barras_grupos_LDA.R
src/Analise/MM/: 01_MM_DP_dados.R  02_MM_DP_resultado.R  analise_topicos_dp_2.R  analise_tópicos_dp.R  faz_graf_linhas_salva_pdf.R  graf_linhas_separado.R  grafico_barras_n_musicas_p_topicos.R  grafico_linhas_todos_topicos.R
src/Analise/distancia/: analise_distancia_JSD.R  boxtplots_salva_pdf_distancias.R  matriz_superior_distancias_dp.R  matrizes_de_distancias.R
src/Analise/kmeans/: hierarquico_e_kmeans.R
src/Analise/modelo_mistura/: 01_MM_DP_dados_Reinaldo.R  02_Analisa_MM_DP_Reinaldo.R
src/Analise/novas_analises/: MM_DP_ultima_iter.R  agrupa_colunas_dtm.R  analise_distancia_JSD_interna_DP.R  analise_dp_2.R  analise_topicos_dp_2.R  analise_tópicos_dp.R  estudo_das_palavras_dp.R  filtra_musicas_por_id.R  filtros.R  grafico_linhas_dp.R  lematizacao_dtm.R  (+3 more)
src/R/: baixa_letra.py  funcao_anos70.R  pega_musica_ano.R  pega_url_selenium.txt
src/data/: baixa_letra.py  pega_musica.py  pega_musica_selenium.py
src/python/: busca_musica_nome.py  pega_musica_ano.py
(+115 files in other folders)
